# borwell_challenge

./: CMakeLists.txt  README.md  main.cpp
Paint_Calculator/: Paint_Calculator.cpp  Paint_Menu.cpp
Paint_Calculator/include/: Paint_Calculator.hpp  Paint_Menu.hpp
tests/: CMakeLists.txt  test_main.cpp
